Date now moves around

--- a/appinfo.json
+++ b/appinfo.json
@@ -4,6 +4,7 @@
         "configurable"
     ],
     "companyName": "Erik",
+    "enableMultiJS": false,
     "longName": "FullCircle",
     "projectType": "native",
     "resources": {
@@ -24,7 +25,7 @@
         "chalk"
     ],
     "uuid": "43537986-db67-4ab7-afa6-e3c32d9d0b15",
-    "versionLabel": "1.2",
+    "versionLabel": "1.4",
     "watchapp": {
         "watchface": true
     }
